--- a/css/styles.css
+++ b/css/styles.css
@@ -194,12 +194,12 @@ article {
 }
 .insideLabel {
 	width: 14.2vw;
-	min-width:150px;
-	height: 165px;
+	min-width:168px;
+	height: 150px;
 	background-color: #fff;
 	border: 5px solid #fff;
 	border-radius: 15px;
-	margin: 0em 1em 3em 0em;
+	margin: 1em 1em 3em 0em;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
@@ -271,7 +271,7 @@ aside {
 	margin-bottom: 4em;
 }
 .activitiesLabel {
-	height: 378px;
+	height: 375px;
 	border-radius: 15px;
 	display: flex;
 	flex-wrap: wrap;
@@ -311,12 +311,19 @@ aside {
 }
 .section2Photo5 {
 	width:100%;
-	height: 125px;
+	height: 115px;
 	border-radius: 15px 15px 0px 0px;
 	object-fit: cover;
 }
+.section2Photo6 {
+	width:100%;
+	height: 115px;
+	border-radius: 15px 15px 0px 0px;
+	object-fit: cover;
+}
+
 .section2Text {
-	height: 55px;
+	height: 50px;
 	padding-left: 2.5vw;
 	display: flex;
 	align-items: center;
@@ -341,9 +348,16 @@ ul {
 
 @media (min-width: 768px) and (max-width: 991px) {
 
+	.insideLabel{
+		width: 255px;
+		height: 195px;
+		margin: 0px 15px 40px 15px;
 
+	}
+	.asideLabel{
+		height:195px;
+    }
 }
-
 
 
 /*mobile*/
@@ -449,7 +463,7 @@ ul {
     }
     .insideLabel{
         width: 320px;
-        height: 195px;
+        height: 225px;
         margin: 0px 15px 40px 15px;
     }
     .section2InsideLabel {
@@ -480,14 +494,14 @@ ul {
     .asideInsideLabel{
         width: 310px;
         height: 145px;
-        margin: 0px 20px 40px 20px;
+        margin: 0px 15px 40px 15px;
     }
     .section2 {
         padding: 0em 0em 0em 0em;
     }
     .activitiesLabel {
         height: 100%;
-        padding: 0em 1.5em 0em 1.5em;
+        padding: 0em 21,5m 0em 1,5em;
         border-radius: 0px;
         background-color: #fff;
         margin-left: 0%;
