--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 
 body {
 	margin:0;
-	font-family: "Raleway", sans-serif;
+	font-family: 'Raleway', sans-serif;
 	font-size: 13px;
 	font-weight: normal;
 }
