--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 /*desktop*/
 
 body{
+	max-width: 1440px;
 	margin:0;
 	font-family: "Raleway", sans-serif;
 	font-size: 13px;
@@ -181,7 +182,7 @@ main {
 }
 article {
 	width: 70%;
-	border-radius: 1.5em;
+	border-radius: 1,5em;
 	background-color: #f2f2f2;
 	display: flex;
 	flex-direction: column;
@@ -189,12 +190,10 @@ article {
 	padding: 2vw 2vw 3vw 3vw;
 }
 .articleLabel {
+	background-color: #f2f2f2;
 	height: 100%;
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-between;
-	align-content: space-between;
-	background-color: #f2f2f2;
 }
 .insideLabel {
 	width: 14.2vw;
@@ -240,8 +239,8 @@ aside {
 }
 .asideInsideLabel {
 	display: flex;
-	width: 310px;
-	height: 120px;
+	width: 300px;
+	height: 100px;
 	background-color: #fff;
 	border: 5px solid #fff;
 	border-radius: 15px;
@@ -505,6 +504,9 @@ ul {
         flex-wrap: wrap;
         justify-content: center;
     }
+	h4 {
+		padding: 0em 3em 0em 3em;
+	}
     .asideInsideLabel{
         width: 310px;
         height: 145px;
