--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 
 body{
 	max-width: 1440px;
-	margin:0;
+	margin:0 auto;
 	font-family: "Raleway", sans-serif;
 	font-size: 13px;
 	font-weight: normal;
@@ -56,7 +56,6 @@ header h1 {
 	display: block;
 	margin-right: 1.5em;
 }
-
 .search {
 	height: 3em;
 	width: 400px;
@@ -187,7 +186,7 @@ article {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	padding: 2vw 2vw 3vw 3vw;
+	padding: 2rem;
 }
 .articleLabel {
 	background-color: #f2f2f2;
@@ -196,7 +195,7 @@ article {
 	flex-wrap: wrap;
 }
 .insideLabel {
-	width: 14.2vw;
+	width: 16rem;
 	min-width:168px;
 	height: 150px;
 	background-color: #fff;
@@ -214,7 +213,6 @@ article {
 	border-radius: 15px 15px 0px 0px;
 	object-fit: cover;
 }
-
 .title {
 	font-weight: bold;
 	font-size: 1em;
