--- a/css/styles.css
+++ b/css/styles.css
@@ -177,11 +177,10 @@ main {
 	padding: 0vw 2vw 0vw 2vw;
 	margin-top: 3em;
 	display: flex;
-	margin-bottom: 2,5em;
 }
 article {
 	width: 70%;
-	border-radius: 1,5em;
+	border-radius: 15px;
 	background-color: #f2f2f2;
 	display: flex;
 	flex-direction: column;
@@ -193,6 +192,7 @@ article {
 	height: 100%;
 	display: flex;
 	flex-wrap: wrap;
+	justify-content: space-between;
 }
 .insideLabel {
 	width: 16rem;
@@ -456,6 +456,7 @@ ul {
     }
 	#accomodations{
 		padding: 0em 2em 0em 2em;
+		margin-top: 0;
 	}
     
     h4 {
@@ -518,7 +519,7 @@ ul {
 	}
     .activitiesLabel {
         height: 100%;
-        padding: 0em 21,5m 0em 1,5em;
+        padding: 0 1,5em:
         border-radius: 0px;
         background-color: #fff;
         margin-left: 0%;
@@ -528,7 +529,6 @@ ul {
         flex-wrap: wrap;
         justify-content: center;
     }
-	
     .section2InsideLabel {
         width: 320px;
         height: 190px;
