--- a/css/styles.css
+++ b/css/styles.css
@@ -194,6 +194,9 @@ article {
 	flex-wrap: wrap;
 	justify-content: space-between;
 }
+#accomodations{
+	margin-top: 0;
+}
 .insideLabel {
 	width: 16rem;
 	min-width:168px;
