--- a/css/styles.css
+++ b/css/styles.css
@@ -48,6 +48,7 @@ nav a:hover {
 }
 h2,
 .graph {
+	margin-bottom: 2rem;
 	font-weight: bold;
 	font-size: 1.6em;
 }
@@ -275,7 +276,7 @@ aside {
 }
 .section2 {
 	padding: 2rem;
-	display: flex;
+	display: bloc;
 	flex-direction: column;
 	margin-bottom: 2em;
 }
@@ -289,46 +290,52 @@ aside {
 	justify-content: space-between;
 }
 .section2InsideLabel {
-	width: 275px;
+	width: 325px;
 	border-radius: 15px;
 	background-color: #fff;
 	box-shadow: 0 0 16px #0000002e;
 }
 .section2Photo1 {
-	width:100%;
+	width: 100%;
 	height: 320px;
-	border-radius: 15px 15px 0px 0px;
+	justify-content: center;
 	object-fit: cover;
+	border-radius: 1.25rem 1.25rem 0 0;
 }
 .section2Photo2 {
-	width:100%;
-	height: 145px;
-	border-radius: 15px 15px 0px 0px;
-	object-fit: cover;
+    width: 100%;
+    height: 150px;
+    justify-content: center;
+    object-fit: cover;
+	border-radius: 1.25rem 1.25rem 0 0;
 }
 .section2Photo3 {
-	width:100%;
-	height: 95px;
-	border-radius: 15px 15px 0px 0px;
-	object-fit: cover;
+    width: 100%;
+    height: 95px;
+    justify-content: center;
+    object-fit: cover;
+	border-radius: 1.25rem 1.25rem 0 0;
 }
 .section2Photo4 {
-	width:100%;
-	height: 320px;
-	border-radius: 15px 15px 0px 0px;
-	object-fit: cover;
+	width: 100%;
+    height: 320px;
+    justify-content: center;
+    object-fit: cover;
+	border-radius: 1.25rem 1.25rem 0 0;
 }
 .section2Photo5 {
-	width:100%;
-	height: 115px;
-	border-radius: 15px 15px 0px 0px;
-	object-fit: cover;
+	width: 100%;
+    height: 115px;
+    justify-content: center;
+    object-fit: cover;
+	border-radius: 1.25rem 1.25rem 0 0;
 }
 .section2Photo6 {
-	width:100%;
-	height: 115px;
-	border-radius: 15px 15px 0px 0px;
-	object-fit: cover;
+	width: 100%;
+    height: 115px;
+    justify-content: center;
+    object-fit: cover;
+	border-radius: 1.25rem 1.25rem 0 0;
 }
 .section2Text {
 	height: 50px;
