--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,6 @@
 
 
 body{
-	max-width: 1440px;
 	margin:0 auto;
 	font-family: "Raleway", sans-serif;
 	font-size: 13px;
@@ -14,6 +13,7 @@ a{
 }
 header {
 	padding: 0vw 2vw 0vw 2vw;
+	width: 75%;
 }
 .top {
 	margin-top: 2em;
@@ -154,7 +154,6 @@ header h1 {
 .logo i {
 	font-size: 1.2em;
 }
-
 .information {
 	display: flex;
 	align-items: center;
@@ -181,7 +180,7 @@ main {
 	display: flex;
 }
 article {
-	width: 70%;
+	width: 50%;
 	border-radius: 15px;
 	background-color: #f2f2f2;
 	display: flex;
@@ -279,9 +278,16 @@ aside {
 	padding: 2rem;
 	display: bloc;
 	flex-direction: column;
-	margin-bottom: 2em;
+	margin-bottom: 1em;
+}
+#activities {
+	margin-top: 0;
+	padding: 1rem;
 }
 .activitiesLabel {
+	width: 76%;
+	padding: 1rem;;
+	margin-top: 1rem;
 	height: 375px;
 	border-radius: 10px;
 	display: flex;
@@ -301,7 +307,7 @@ aside {
 	height: 320px;
 	justify-content: center;
 	object-fit: cover;
-	border-radius: 1.25rem 1.25rem 0 0;
+	border-radius: 1,25rem 1,25rem 0 0;
 }
 .section2Photo2 {
     width: 100%;
@@ -347,11 +353,11 @@ aside {
 footer {
 	background-color: #f2f2f2;
 	display: flex;
-	width: 100%;
+	width: 80%;
 	line-height: 2em;
 }
 footer div {
-	width:33vw;
+	width: 35%;
 	display: flex;
 	flex-direction: column;
 }
