--- a/css/styles.css
+++ b/css/styles.css
@@ -287,7 +287,6 @@ aside {
 .activitiesLabel {
 	width: 76%;
 	padding: 1rem;;
-	margin-top: 1rem;
 	height: 375px;
 	border-radius: 10px;
 	display: flex;
@@ -297,7 +296,7 @@ aside {
 	justify-content: space-between;
 }
 .section2InsideLabel {
-	width: 325px;
+	width: 320px;
 	border-radius: 15px;
 	background-color: #fff;
 	box-shadow: 0 0 16px #0000002e;
@@ -369,207 +368,61 @@ ul {
 
 /*grand écrans*/
 
-@media screen (min-width: 1441px) {
+@media screen (min-width: 1119px) {
+	.section2InsideLabel {
+		width: 230px;
+		border-radius: 15px;
+		background-color: #fff;
+		box-shadow: 0 0 16px #0000002e;
+	}
 
-}
-	
-}
 
 /*tablet*/
 
 @media (min-width: 768px) and (max-width: 991px) {
-	
 
 
 	/*mobile*/
 
 @media screen and (max-width: 767px) {
-    body{
-        margin: auto;
-    }
-    header{
-        padding: 0em 0em 0em 0em;
-    }
-    #logo {
-        margin-bottom: 1em;
-        padding: 0em 1.5em 0em 1.5em;
-    }
-    .top {
-        display: inline;
-    }
-    nav {
-        width: 100%;
-        display: flex;
-    }
-    .navHebergements {
-        width: 50%;
-        color: black;
-        border-top: 3px solid transparent;
-        border-bottom: 3px solid #f2f2f2;
-        padding-bottom: 1em;
-        display: flex;
-        justify-content: center;
-    }
-    .navActivities {
-        width: 50%;
-        color: black;
-        border-bottom: 3px solid #f2f2f2;
-        padding-bottom: 1em;
-        display: flex;
-        justify-content: center;
-    }
-    .navSubscribe {
-        border-top: 3px solid transparent;
-        height:20px;
-        position:absolute; 
-        top:15px;
-        right:25px;
-    }
-    nav a:hover {
-        color:#0065fc;
-        border-top: 3px solid transparent;
-        border-bottom: 3px solid #0065fc;
-    }
-    .hebergement{
-        padding: 0em 1.5em 0em 1.5em;
-    }
-    .search {
-        padding: 1.5em 1.5em 0em 1.5em;
-        max-width: 320px;
-        width:90%;
-    }
-    .searchText {
-        display: none;
-    }
-    #search {
-        background-color: #0065fc;
-        color: #fff;
-        height: 100%;
-        width: 4em;
-        margin-left: -0.7em;
-        border-radius: 15px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-    .filters {
-        padding: 0em 0em 0em 1.5em;
-    }
-    .titleFilters {
-        width:100%;
-    }
-    .information{
-        padding: 0em 1.5em 0em 1.5em;		
-    }
-    main {
-        padding: 0em 0em 0em 0em;
-        display: flex;
-        flex-direction: column-reverse;
-        border-radius: 0px;
-        margin-left: 0;
-        margin-right: 0;
-        margin-bottom: 1em;
-    }
-	#accomodations{
-		padding: 0em 2em 0em 2em;
-		margin-top: 0;
-	}
-    
-    h4 {
-        padding: 0em 0em 0em 1.5em;
-    }
-    .articleLabel {
-        padding: 0em 0em 0em 0em;
-        margin-left: 0;
-        margin-right: 0;
-        height: 100%;
-        background-color: #fff;
-        justify-content: center;
-    }
-    .insideLabel{
-        width: 320px;
-        height: 225px;
-        margin: 0px 15px 40px 15px;
-    }
-    .section2InsideLabel {
-        width: 320px;
-        height: 195px;
-        margin: 0px 20px 40px 20px;
-    }
-    article {
-        width: 100%;
-        background-color: #fff;
-        padding: 0em 0em 0em 0em;
-    }
-    aside {
-        width: 100%;
-        padding: 0em 0em 0em 0em;
-        border-radius: 0px;
-        background-color: #f2f2f2;
-        margin-left: 0;
-    }
-	#popular{
-		padding: 0em 2em 0em 2em;
-	}
-    .asideLabel{
-        height:100%;
-        padding: 0em 0em 0em 0em;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-	h4 {
-		padding: 0em 3em 0em 3em;
-	}
-    .asideInsideLabel{
-        width: 310px;
-        height: 145px;
-        margin: 0px 15px 40px 15px;
-    }
-    .section2 {
-        padding: 0em 0em 0em 0em;
-    }
-	#activities{
-		padding: 0em 2em 0em 2em;
-	}
-    .activitiesLabel {
-        height: 100%;
-        padding: 0 1.5em;
-        border-radius: 0px;
-        background-color: #fff;
-        margin-left: 0%;
-        margin-bottom: 1em;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-    .section2InsideLabel {
-        width: 320px;
-        height: 190px;
-    }
-    .section2Photo1 {
-        width: 100%;
-        height: 140px;
-    }
-    .section2Photo2 {
-        width: 100%;
-        height: 130px;
-    }
-    .section2Photo3 {
-        width: 100%;
-        height: 130px;
-    }
-    .section2Photo4 {
-            width: 100%;
-            height: 130px;
-    }
-    .section2Photo5 {
-        width: 100%;
-        height: 130px;
-    }
-    footer {
-        display: block;
-    }
+	body {
+		/* width: 100%;  */
+   }
+   .articleLabel {
+	   padding: 0em 0em 0em 0em;
+   }	
+   aside{
+	   padding: 0em 0em 0em 0em;
+	   
+   }
+   .section2 {
+	   padding: 0em 0em 0em 0em;
+   }
+   #activities{
+	   padding: 0em 1.5em 0em 1.5em;
+   }
+   .insideLabel {
+	   margin:0vh 5vw 5vw 5vw;
+	   width: 86vw;
+	   height: 195px;
+   }
+   .asideTitle{
+	   /* margin:0vh 0vw 0vw 0vw; */
+	   padding: 0em 1.5em 0em 1.5em;
+	   width:86vw;
+   }	
+   .asideInsideLabel{
+	   margin:0vh 0vw 5vw 0vw;
+	   width: 86vw;
+	   height: 120px;
+   }
+   .section2InsideLabel {
+	   margin:0vh 0vw 5vw 0vw;
+	   width: 88vw;
+	   height: 195px;
+   }	
+   ul{
+	   padding: 0em 1.5em 0em 1.5em;		
+   }
+
 }
