--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,5 @@
 /*desktop*/
 
-
 body{
 	margin:0 auto;
 	font-family: "Raleway", sans-serif;
@@ -12,8 +11,8 @@ a{
 	text-decoration: none;
 }
 header {
+	width: auto;
 	padding: 0vw 2vw 0vw 2vw;
-	width: 75%;
 }
 .top {
 	margin-top: 2em;
@@ -43,17 +42,27 @@ nav a:hover {
 .navSubscribe {
 	color: #0065fc;
 }
+.navHebergements{
+	color: #0065fc;
+}
 .ligne1 {
 	margin-top: 1em;
 	font-weight: bold;
+	width: auto;
+	padding: 0vw 2vw 0vw 2vw;
+}
+.ligne2 {
+	margin-top: 1em;
+	width: auto;
+	padding: 0vw 2vw 0vw 2vw;
+	font-size:1.2em;
 }
 h2,
 .graph {
 	margin-bottom: 2rem;
 	font-weight: bold;
 	font-size: 1.6em;
-}
-header h1 {
+}header h1 {
 	font-size: 1.6em;
 	display: block;
 	margin-right: 1.5em;
@@ -65,19 +74,20 @@ header h1 {
 	font-weight: bold;
 	font-size: 1.2em;
 	display: flex;
+	width: auto;
+	padding: 0vw 2vw 0vw 2vw;
 }
 .location {
 	background-color: #f2f2f2;
 	border-color: #f2f2f2;
 	height: 100%;
-	width: 4.5em;
+	width: 4,5em;
 	border-radius: 1em 0em 0em 1em;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 }
 .searchInput {
-	width: 100%;
 	display: flex;
 	margin: 0;
 	border-color: #f2f2f2;
@@ -103,12 +113,20 @@ header h1 {
 	display: none;
 }
 .filters {
+	width: auto;
+	padding: 0vw 2vw 0vw 2vw;
 	display: flex;
 	font-size: 1.3em;
 	color: black;
 	margin: 2em 0em 1em 0em;
 	font-weight:bold;
 	flex-wrap: wrap;
+}
+.titleFilters{
+	display: flex;
+    align-items: center;
+    margin-bottom: 1.2em;
+	margin-right: 1.5em;
 }
 .titleFilters{
 	display: flex;
@@ -155,6 +173,8 @@ header h1 {
 	font-size: 1.2em;
 }
 .information {
+	width: auto;
+	padding: 0vw 2vw 0vw 2vw;
 	display: flex;
 	align-items: center;
 	height: 2.5em;
@@ -171,258 +191,115 @@ header h1 {
 	align-items: center;
 	margin-right: 10px;
 }
-.ligne2,.infoText{
+.infotext{
 	font-size:1.2em;
-}
-main {
-	padding: 0vw 2vw 0vw 2vw;
-	margin-top: 3em;
-	display: flex;
-}
-article {
-	width: 50%;
-	border-radius: 15px;
-	background-color: #f2f2f2;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	padding: 1rem;
-}
-.articleLabel {
-	background-color: #f2f2f2;
-	height: 100%;
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
-	align-content: space-between;
-}
-#accomodations{
-	margin-top: 0;
-}
-.insideLabel {
-	width: 16rem;
-	min-width:168px;
-	height: 150px;
-	background-color: #fff;
-	border: 5px solid #fff;
-	border-radius: 15px;
-	margin: 1em 1em 3em 0em;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	box-shadow: 0 0 16px #0000002e;
-}
-.photo {
-	width: 100%;
-	height: 60%;
-	border-radius: 15px 15px 0px 0px;
-	object-fit: cover;
-}
-.title {
-	font-weight: bold;
-	font-size: 1em;
-}
-aside {
-	border-radius: 15px;
-	background-color: #f2f2f2;
-	margin-left: 2vw;
-	padding: 0vw 3vw 0vw 3vw;
-}
-.aside {
-	height: 100%;
-	display: flex;
-	flex-direction: column;
-}
-.asideTitle {
-	width: 320px;
-	padding: 20px 0px 20px 0px;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-}
-#popular{
-	margin-top: 0;
-}
-.asideInsideLabel {
-	display: flex;
-	width: 310px;
-	height: 120px;
-	background-color: #fff;
-	border: 5px solid #fff;
-	border-radius: 15px;
-	margin-bottom: 30px;
-	box-shadow: 0 0 16px #0000002e;
-}
-.asidePhoto {
-	height: 100%;
-	width: 40%;
-	object-fit: cover;
-	border-radius: 11px 0px 0px 11px;
-}
-.asideText {
-	padding: 10px;
-	line-height: 1.5em;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-}
-.stars {
-	display: flex;
-	align-items: baseline;
-	color: #0065fc;
-}
-.emptyStars {
-	color: #f2f2f2;
-}
-.section2 {
-	padding: 2rem;
-	display: bloc;
-	flex-direction: column;
-	margin-bottom: 1em;
-}
-#activities {
-	margin-top: 0;
-	padding: 1rem;
-}
-.activitiesLabel {
-	width: 76%;
-	padding: 1rem;;
-	height: 375px;
-	border-radius: 10px;
-	display: flex;
-	flex-wrap: wrap;
-	flex-direction: column;
-	align-content: space-between;
-	justify-content: space-between;
-}
-.section2InsideLabel {
-	width: 320px;
-	border-radius: 15px;
-	background-color: #fff;
-	box-shadow: 0 0 16px #0000002e;
-}
-.section2Photo1 {
-	width: 100%;
-	height: 320px;
-	justify-content: center;
-	object-fit: cover;
-	border-radius: 1,25rem 1,25rem 0 0;
-}
-.section2Photo2 {
-    width: 100%;
-    height: 150px;
-    justify-content: center;
-    object-fit: cover;
-	border-radius: 1.25rem 1.25rem 0 0;
-}
-.section2Photo3 {
-    width: 100%;
-    height: 95px;
-    justify-content: center;
-    object-fit: cover;
-	border-radius: 1.25rem 1.25rem 0 0;
-}
-.section2Photo4 {
-	width: 100%;
-    height: 320px;
-    justify-content: center;
-    object-fit: cover;
-	border-radius: 1.25rem 1.25rem 0 0;
-}
-.section2Photo5 {
-	width: 100%;
-    height: 115px;
-    justify-content: center;
-    object-fit: cover;
-	border-radius: 1.25rem 1.25rem 0 0;
-}
-.section2Photo6 {
-	width: 100%;
-    height: 115px;
-    justify-content: center;
-    object-fit: cover;
-	border-radius: 1.25rem 1.25rem 0 0;
-}
-.section2Text {
-	height: 50px;
-	padding-left: 2.5vw;
-	display: flex;
-	align-items: center;
-}
-footer {
-	background-color: #f2f2f2;
-	display: flex;
-	width: 80%;
-	line-height: 2em;
-}
-footer div {
-	width: 35%;
-	display: flex;
-	flex-direction: column;
-}
-ul {
-	list-style-type: none;
-	min-width: 280px;
-}
+	width: auto;
 }
 
-/*grand écrans*/
-
-@media screen (min-width: 1119px) {
-	.section2InsideLabel {
-		width: 230px;
-		border-radius: 15px;
-		background-color: #fff;
-		box-shadow: 0 0 16px #0000002e;
-	}
 
 
-/*tablet*/
-
-@media (min-width: 768px) and (max-width: 991px) {
 
 
-	/*mobile*/
+
+
+
+
+
+
+
+
+
+/*mobile*/
 
 @media screen and (max-width: 767px) {
 	body {
-		/* width: 100%;  */
-   }
-   .articleLabel {
-	   padding: 0em 0em 0em 0em;
-   }	
-   aside{
-	   padding: 0em 0em 0em 0em;
-	   
-   }
-   .section2 {
-	   padding: 0em 0em 0em 0em;
-   }
-   #activities{
-	   padding: 0em 1.5em 0em 1.5em;
-   }
-   .insideLabel {
-	   margin:0vh 5vw 5vw 5vw;
-	   width: 86vw;
-	   height: 195px;
-   }
-   .asideTitle{
-	   /* margin:0vh 0vw 0vw 0vw; */
-	   padding: 0em 1.5em 0em 1.5em;
-	   width:86vw;
-   }	
-   .asideInsideLabel{
-	   margin:0vh 0vw 5vw 0vw;
-	   width: 86vw;
-	   height: 120px;
-   }
-   .section2InsideLabel {
-	   margin:0vh 0vw 5vw 0vw;
-	   width: 88vw;
-	   height: 195px;
-   }	
-   ul{
-	   padding: 0em 1.5em 0em 1.5em;		
-   }
+		width: auto
+	   }
+	   header{
+		padding: 0em 0em 0em 0em;
+	}
+	#logo {
+		margin-bottom: 1em;
+		padding: 0em 1.5em 0em 1.5em;
+	}
+	.top {
+		display: inline;
+	}
+	nav {
+		width: 100%;
+		display: flex;
+	}
+	.navHebergements {
+		width: 50%;
+		color: black;
+		border-top: 3px solid transparent;
+		border-bottom: 3px solid #f2f2f2;
+		padding-bottom: 1em;
+		display: flex;
+		justify-content: center;
+	}	
+	.navActivities {
+		width: 50%;
+		color: black;
+		border-bottom: 3px solid #f2f2f2;
+		padding-bottom: 1em;
+		display: flex;
+		justify-content: center;
+	}
+	.navSubscribe {
+		border-top: 3px solid transparent;
+		height:20px;
+		position:absolute; 
+		top:15px;
+		right:25px;
+	}
+	nav a:hover {
+		color:#0065fc;
+		border-top: 3px solid transparent;
+		border-bottom: 3px solid #0065fc;
+	}
+	.ligne1 {
+		padding: 1em 1em 0em 1em;
+	}
+	.ligne2 {
+		padding: 1.5em 1.5em 0em 1.5em;
+	}
+	.search {
+		padding: 1.5em 1.5em 0em 1.5em;
+		max-width: 320px;
+		width:100%;
+	}
+	.searchText {
+		display: none;
+	}
+	#search {
+		background-color: #0065fc;
+		color: #fff;
+		height: 100%;
+		width: 4em;
+		margin-left: -0.7em;
+		border-radius: 15px;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+	.filters {
+		padding: 0em 0em 0em 1.5em;
+	}
+	.titleFilters {
+		width:100%;
+	}
+	.information{
+		padding: 0em 1.5em 0em 1.5em;		
+	}
 
-}
+
+
+
+
+
+
+
+
+/*tablettes*/
+
