--- a/css/styles.css
+++ b/css/styles.css
@@ -57,12 +57,11 @@ nav a:hover {
 	padding: 0vw 2vw 0vw 2vw;
 	font-size:1.2em;
 }
-h2,
-.graph {
-	margin-bottom: 2rem;
+h2, .graph {
 	font-weight: bold;
 	font-size: 1.6em;
-}header h1 {
+}
+header h1 {
 	font-size: 1.6em;
 	display: block;
 	margin-right: 1.5em;
@@ -195,12 +194,101 @@ h2,
 	font-size:1.2em;
 	width: auto;
 }
-
-
-
-
-
-
+main {
+	padding: 0vw 2vw 0vw 2vw;
+	margin-top: 3em;
+	display: flex;
+	margin-bottom: 3em;
+}
+article {
+	width: 70%;
+	border-radius: 1.5em;
+	background-color: #f2f2f2;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	padding: 2vw 2vw 3vw 3vw;
+}
+.articleLabel {
+	height: 100%;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	align-content: space-between;
+	background-color: #f2f2f2;
+}
+.insideLabel {
+	width: 14.2vw;
+	min-width:150px;
+	height: 165px;
+	background-color: #fff;
+	border: 5px solid #fff;
+	border-radius: 15px;
+	margin: 0em 1em 3em 0em;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	box-shadow: 0 0 16px #0000002e;
+}
+.photo {
+	width: 100%;
+	height: 60%;
+	border-radius: 15px 15px 0px 0px;
+	object-fit: cover;
+}
+.title {
+	font-weight: bold;
+	font-size: 1em;
+}
+aside {
+	border-radius: 15px;
+	background-color: #f2f2f2;
+	margin-left: 2vw;
+	padding: 0vw 3vw 0vw 3vw;
+}
+.aside {
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+}
+.asideTitle {
+	width: 320px;
+	padding: 20px 0px 20px 0px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+.asideInsideLabel {
+	display: flex;
+	width: 310px;
+	height: 120px;
+	background-color: #fff;
+	border: 5px solid #fff;
+	border-radius: 15px;
+	margin-bottom: 30px;
+	box-shadow: 0 0 16px #0000002e;
+}
+.asidePhoto {
+	height: 100%;
+	width: 40%;
+	object-fit: cover;
+	border-radius: 11px 0px 0px 11px;
+}
+.asideText {
+	padding: 10px;
+	line-height: 1.5em;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+.stars {
+	display: flex;
+	align-items: baseline;
+	color: #0065fc;
+}
+.emptyStars {
+	color: #f2f2f2;
+}
 
 
 
@@ -292,6 +380,68 @@ h2,
 	.information{
 		padding: 0em 1.5em 0em 1.5em;		
 	}
+	main {
+		padding: 0em 0em 0em 0em;
+		display: flex;
+		flex-direction: column-reverse;
+		border-radius: 0px;
+		margin-left: 0;
+		margin-right: 0;
+		margin-bottom: 1em;
+	}
+	h2 {
+		padding: 0em 0em 0em 1.5em;
+	}
+	.articleLabel {
+		padding: 0em 0em 0em 0em;
+		margin-left: 0;
+		margin-right: 0;
+
+		height: 100%;
+		background-color: #fff;
+		justify-content: center;
+	}
+	.insideLabel{
+		width: 320px;
+		height: 195px;
+		margin: 0px 15px 40px 15px;
+	}
+	.section2InsideLabel {
+		width: 320px;
+		height: 195px;
+		margin: 0px 20px 40px 20px;
+	}
+	article {
+		width: 100%;
+		background-color: #fff;
+		padding: 0em 0em 0em 0em;
+
+	}
+	aside {
+		width: 100%;
+		padding: 0em 0em 0em 0em;
+		border-radius: 0px;
+		background-color: #f2f2f2;
+		margin-left: 0;
+	}
+	.asideLabel{
+		height:100%;
+		padding: 0em 0em 0em 0em;
+		display: flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+		justify-content: center;
+	}
+	.asideInsideLabel{
+		width: 310px;
+		height: 145px;
+		margin: 0px 20px 40px 20px;
+	}
+	h4{
+		width: 310px;
+		margin: 0px 28px 40px 28px;
+	}
+	
 
 
 
