--- a/css/styles.css
+++ b/css/styles.css
@@ -210,12 +210,11 @@ article {
 	padding: 2vw 2vw 3vw 3vw;
 }
 .articleLabel {
+	width: 100%;
 	height: 100%;
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
-	align-content: space-between;
 	background-color: #f2f2f2;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
 }
 .insideLabel {
 	width: 14.2vw;
@@ -714,11 +713,8 @@ ul {
 		padding: 0em 0em 0em 0em;
 	}
 	.activitiesLabel {
-		/* width: 100%; */
 		height: 100%;
-		/* padding: 0px; */
 		padding: 0em 1.5em 0em 1.5em;
-
 		border-radius: 0px;
 		background-color: #fff;
 		margin-left: 0%;
