--- a/css/styles.css
+++ b/css/styles.css
@@ -658,7 +658,7 @@ ul {
 	.articleLabel {
 		padding: 0em 0em 0em 0em;
 		margin-left: 2em;
-		margin-right: 0;
+		margin-right: 4em;
 		height: 100%;
 		background-color: #fff;
 		display: grid;
