--- a/css/styles.css
+++ b/css/styles.css
@@ -80,7 +80,7 @@ header h1 {
 	background-color: #f2f2f2;
 	border-color: #f2f2f2;
 	height: 100%;
-	width: 4,5em;
+	width: 4em;
 	border-radius: 1em 0em 0em 1em;
 	display: flex;
 	align-items: center;
@@ -465,12 +465,13 @@ ul {
 		padding: 0em 0em 0em 1.5em;
 	}
 	.articleLabel {
+		height:100%;
 		padding: 0em 0em 0em 0em;
-		margin-left: 2em;
-		margin-right: 0;
-		height: 100%;
-		background-color: #fff;
-		grid-template-columns: repeat(1, 1fr)
+		display: flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+		justify-content: center;
+		background-color: #fff;	
 	}
 	.insideLabel{
 		width: 320px;
@@ -656,13 +657,13 @@ ul {
 		padding: 0em 0em 0em 1.5em;
 	}
 	.articleLabel {
+		height:100%;
 		padding: 0em 0em 0em 0em;
-		margin-left: 2em;
-		margin-right: 4em;
-		height: 100%;
+		display: flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+		justify-content: center;
 		background-color: #fff;
-		display: grid;
-		grid-template-columns: repeat(2, 1fr)
 	}
 	.insideLabel{
 		width: 320px;
@@ -750,6 +751,9 @@ ul {
 		height: 140px;
 	}
 	footer {
-		display: block;
+		background-color: #f2f2f2;
+		display: flex;
+		width: 100%;
+		line-height: 2.2em;
 	}
 }
