--- a/css/styles.css
+++ b/css/styles.css
@@ -565,7 +565,6 @@ ul {
 }
 
 
-
 /*tablettes*/
 
 @media (min-width: 768px) and (max-width: 991px) {
@@ -650,7 +649,7 @@ ul {
 		flex-direction: column-reverse;
 		border-radius: 0px;
 		margin-left: 0%;
-		margin-right: 0;
+		margin-right: 0%;
 		margin-bottom: 1em;
 	}
 	h2 {
