--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@ body {
     font-family: "Raleway", sans-serif;
     font-size: 13px;
     font-weight: normal;
+    object-fit: cover;
 }
 a{
     color:black;
