--- a/css/styles.css
+++ b/css/styles.css
@@ -755,5 +755,13 @@ ul {
         width: 100%;
         line-height: 2.2em;
     }
+	
+@media (min-width: 430 and (max-width: 735 {
+	
+	 .insideLabel{
+        width: 220px;
+        height: 195px;
+        margin: 0px 15px 40px 15px;
+    }
 }
 
